# clod

./: .gitignore  Doxyfile  README.md  build.gradle  cc_linux.aarch64.ini  cc_windows.x86_64.ini  gradle.properties  header.html  meson.build  settings.gradle
api/: README.md
api/src/main/java/: LODStore.java
api/src/main/java/link/lenqua/clod/: LODStore.java
cli/: README.md  build.gradle  meson.build
cli/src/: file.h  file_posix.c  file_windows.c  main.c
clod/: README.md  build.gradle  meson.build
clod/src/clod/: README.md  main.c
clod/src/libclod/: README.md  clod.h  region.c  serialise.c  store.c
clod/src/libregion/: README.md  region.c  region.h
clod/subprojects/: .gitignore  liblz4.wrap
core/src/main/java/link/lenqua/clod/: CLMain.java
fabric/src/main/java/: CLFabricMain.java  CLODFabricClientMain.java  CLODFabricServerMain.java
fabric/targets/: 1.17.1.gradle  1.18.0.gradle  1.18.1.gradle  1.18.2.gradle  1.19.0.gradle  1.19.1.gradle  1.19.2.gradle  1.19.3.gradle  1.19.4.gradle  1.20.0.gradle  1.20.1.gradle  1.20.2.gradle  1.20.3.gradle  1.20.4.gradle  1.20.6.gradle  1.21.0.gradle  1.21.1.gradle  1.21.3.gradle  1.21.4.gradle  1.21.5.gradle
forge/src/main/java/: CLForgeMain.java  CLODForgeClientMain.java  CLODForgeServerMain.java
forge/targets/: 1.17.1.gradle  1.18.0.gradle  1.18.1.gradle  1.18.2.gradle  1.19.0.gradle  1.19.1.gradle  1.19.2.gradle  1.19.3.gradle  1.19.4.gradle  1.20.0.gradle  1.20.1.gradle  1.20.2.gradle  1.20.3.gradle  1.20.4.gradle  1.20.6.gradle
libclod/: README.md  build.gradle  meson.build
libclod/include/: anvil.h  dh.h  nbt.h
libclod/resources/dh_constants/: compression_mode.lzma  gen_step.lz4  gen_step.lzma
libclod/src/: anvil.c  anvil_chunk.c  anvil_chunk_old.c  anvil_internal.h  anvil_region_dir.c  anvil_region_file.c  anvil_region_file.old2.c  anvil_world.c  anvil_world.h  anvil_world_old.c  anvil_world_old.h  buffer.h  compress.c  compress.h  dh.c  dh_db.c  dh_generate.c  dh_lod.c  dh_lod.h  dh_lod_from_chunks.c  dh_lod_generate.c  dh_lod_mip.c  dh_lod_mip_nxn.c  dh_serialise.c  file.c  file.h  nbt.c  os.h  os_gnu_source.c  path.h  serialise.c
libclod/test/: chunk_data.nbt  dh_generate_and_store_benchmark.c  dh_generate_benchmark.c  generate_dh_lod.c  generate_dh_lods.c  generate_dh_lods_benchmark.c  open_region.c  open_world.c  open_world_benchmark.c  open_zlib_region.c  parse_nbt.c  read_chunk_sections.c  read_chunk_sections_benchmark.c  write_dh_database.c
libclod/test/world/: level.dat_old
libclod/test/world/advancements/: 380df991-f603-344c-a090-369bad2a924a.json
libclod/test/world/entities/: r.-2.-1.mca  r.-2.0.mca  r.-3.-1.mca  r.-3.0.mca
libclod/test/world/playerdata/: 380df991-f603-344c-a090-369bad2a924a.dat_old
libclod/test/world/poi/: r.-2.0.mca  r.-3.0.mca
libclod/test/world/region/: r.-2.-1.mca  r.-2.1.mca  r.-3.-1.mca  r.-3.1.mca  r.-4.-1.mca  r.-4.0.mca  r.-4.1.mca
libclod/test/world/stats/: 380df991-f603-344c-a090-369bad2a924a.json
liblod/: README.md  lod.h  meson.build
liblod/include/: dh.h
liblod/src/: dh.c  serialise.c  store.c
liblod/test/: write_dh_database.c
libmc/: README.md  mc.h  meson.build
libmc/include/: nbt.h  region.h
libmc/src/: file.c  file.h  nbt.c  region.c
libmc/test/: open_region.c  parse_nbt.c  test.c  test.h  test_main.c  test_nbt.c  test_region.c
mod/: README.md  build.gradle
mod/src/main/java/: CLODClientMain.java  CLODServerMain.java
mod/src/main/java/link/lenqua/clod/: CLODClientMain.java  CLODServerMain.java
neoforge/src/main/java/: CLNeoForgeMain.java  CLODNeoForgeClientMain.java  CLODNeoForgeServerMain.java
neoforge/targets/: 1.21.0.gradle  1.21.1.gradle  1.21.3.gradle  1.21.4.gradle  1.21.5.gradle
paper/src/main/java/: CLODPaperServerMain.java  CLPaperMain.java
paper/targets/: 1.17.1.gradle  1.18.0.gradle  1.18.1.gradle  1.18.2.gradle  1.19.0.gradle  1.19.1.gradle  1.19.2.gradle  1.19.3.gradle  1.19.4.gradle  1.20.0.gradle  1.20.1.gradle  1.20.2.gradle  1.20.3.gradle  1.20.4.gradle  1.20.6.gradle  1.21.0.gradle  1.21.1.gradle  1.21.3.gradle  1.21.4.gradle  1.21.5.gradle
spigot/src/main/java/: CLODSpigotServerMain.java  CLSpigotMain.java
spigot/targets/: 1.17.1.gradle  1.18.0.gradle  1.18.1.gradle  1.18.2.gradle  1.19.0.gradle  1.19.1.gradle  1.19.2.gradle  1.19.3.gradle  1.19.4.gradle  1.20.0.gradle  1.20.1.gradle  1.20.2.gradle  1.20.3.gradle  1.20.4.gradle  1.20.6.gradle  1.21.0.gradle  1.21.1.gradle  1.21.3.gradle  1.21.4.gradle  1.21.5.gradle
